--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -43,7 +43,29 @@
     "\n",
     "<hr>\n",
     "\n",
-    "### **Components of RAG:**\n"
+    "## **Components of RAG:**\n",
+    "\n",
+    "### **1. Retriever:**\n",
+    "\n",
+    "The retriever is responsible for fetching relevant documents or information from an external knowledge base based on the input query. The external knowledge is fetched from sources like Vector Database, Scraped Data, PDFs, etc.\n",
+    "\n",
+    "Types of Retrievers:\n",
+    "\n",
+    "- **Sparse Retrievers:** Use traditional methods like TF-IDF or BM25 to find relevant documents based on keyword matching.\n",
+    "\n",
+    "- **Dense Retrievers:** Use neural networks to create dense vector representations of documents and queries, allowing for more semantic matching. Examples include models like Sentence Transformers.\n",
+    "\n",
+    "### **2. Language Model (LLM):**\n",
+    "\n",
+    "The LLM generates responses based on the input query and the retrieved documents. It can be any large language model, such as GPT-3, GPT-4, or other open-source models.\n",
+    "\n",
+    "These things can be combined in different ways to create various RAG architectures, such as:\n",
+    "\n",
+    "- **Retrieve-then-Generate:** The retriever fetches relevant documents first, and then the LLM generates a response based on those documents.\n",
+    "\n",
+    "- **Generate-then-Retrieve:** The LLM generates an initial response, which is then refined using information from the retrieved documents.\n",
+    "\n",
+    "<hr>\n"
    ]
   },
   {
