--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -70,11 +70,87 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a6fbf14d",
+   "metadata": {},
+   "source": [
+    "## **Knowledge Base Creation**\n",
+    "\n",
+    "**What is a Knowledge Base?**\n",
+    "\n",
+    "A knowledge base is a structured repository of information that can be used to support the retrieval of relevant documents for RAG systems. It can consist of various types of data, such as text documents, PDFs, web pages, or any other form of unstructured or semi-structured data.\n",
+    "\n",
+    "It is basically a `Vector Database` that stores the vector representations of documents for efficient retrieval.\n",
+    "\n",
+    "There are several steps involved in creating a knowledge base for RAG systems.\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "### **Steps to Create a Knowledge Base**\n",
+    "\n",
+    "**1. Data Collection:**\n",
+    "\n",
+    "The first step is to gather the data that will form the basis of the knowledge base. This can involve scraping web pages, collecting documents, or using existing datasets.\n",
+    "\n",
+    "We need to collect all the relevant data sources. This includes documents, articles, PDFs, web pages, images, videos, audio files, etc.\n",
+    "\n",
+    "**2. Data Preprocessing:**\n",
+    "\n",
+    "Once the data is collected, it needs to be preprocessed to ensure consistency and quality. This may involve cleaning the text, removing duplicates, and standardizing formats.\n",
+    "\n",
+    "Preprocessing steps may include:\n",
+    "\n",
+    "- Text cleaning (removing special characters, HTML tags, etc.)\n",
+    "\n",
+    "- Tokenization (splitting text into words or sentences)\n",
+    "\n",
+    "- Normalization (lowercasing, stemming, lemmatization)\n",
+    "\n",
+    "- Removing stop words (common words that do not add much meaning)\n",
+    "\n",
+    "**3. Document Segmentation:**\n",
+    "\n",
+    "Large documents should be segmented into smaller, manageable chunks. This helps in better retrieval and ensures that the LLM can effectively utilize the information.\n",
+    "\n",
+    "Document segmentation can be done based on:\n",
+    "\n",
+    "- Paragraphs\n",
+    "\n",
+    "- Sentences\n",
+    "\n",
+    "- Fixed-size chunks (e.g., 512 tokens)\n",
+    "\n",
+    "**4. Embedding Generation:**\n",
+    "\n",
+    "The next step is to convert the preprocessed text into vector representations (embeddings) using a suitable embedding model. These embeddings capture the semantic meaning of the text and allow for efficient similarity searches.\n",
+    "\n",
+    "Popular embedding models include:\n",
+    "\n",
+    "- Sentence Transformers (e.g., `all-MiniLM-L6-v2`, `paraphrase-MiniLM-L3-v2`)\n",
+    "\n",
+    "- OpenAI Embeddings (e.g., `text-embedding-ada-002`)\n",
+    "\n",
+    "- Image Embeddings (e.g., CLIP for images)\n",
+    "\n",
+    "- Multimodal Embeddings (e.g., models that combine text and image embeddings)\n",
+    "\n",
+    "**5. Indexing:**\n",
+    "\n",
+    "Once the embeddings are generated, they need to be indexed in a vector database for efficient retrieval. Popular vector databases include:\n",
+    "\n",
+    "- Milvus\n",
+    "\n",
+    "- Pinecone\n",
+    "\n",
+    "- Weaviate\n",
+    "\n",
+    "<hr>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cc6a85d7",
    "metadata": {},
    "source": [
-    "<hr>\n",
-    "<hr>\n",
     "<hr>\n",
     "<hr>\n"
    ]
