--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -41,6 +41,10 @@
     "\n",
     "In this approach, the retriever fetches relevant documents from an external knowledge base based on the input query. The LLM then uses these documents to generate a more accurate and contextually relevant response.\n",
     "\n",
+    "This works, but **Can't we fine-tune the LLM directly on the external knowledge?**\n",
+    "\n",
+    "**Answer:** Fine-tuning LLMs on large external knowledge bases can be computationally expensive and time-consuming. RAG allows for dynamic retrieval of information without the need for extensive fine-tuning, making it more efficient and adaptable to changing knowledge.\n",
+    "\n",
     "<hr>\n",
     "\n",
     "## **Components of RAG:**\n",
