--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -69,6 +69,24 @@
     "\n",
     "- **Generate-then-Retrieve:** The LLM generates an initial response, which is then refined using information from the retrieved documents.\n",
     "\n",
+    "<hr>\n",
+    "\n",
+    "## **Workflow of RAG:**\n",
+    "\n",
+    "1. **Input Query:** The user provides an input query that they want to get information about.\n",
+    "\n",
+    "2. **Parse Query:** The query is parsed and pre-processed to prepare it for retrieval.\n",
+    "\n",
+    "3. **Generate Embedding for Query:** The parsed query is converted into a vector representation (embedding) using a pre-trained model.\n",
+    "\n",
+    "4. **Retrieve Relevant Documents:** The retriever uses the query embedding to search the external knowledge base and fetch relevant documents.\n",
+    "\n",
+    "5. **Combine Query and Documents:** The input query and the retrieved documents are combined to form a context for the LLM.\n",
+    "\n",
+    "6. **Generate Response:** The LLM processes the combined context and generates a response to the input query.\n",
+    "\n",
+    "7. **Output Response:** The generated response is returned to the user.\n",
+    "\n",
     "<hr>\n"
    ]
   },
@@ -121,7 +139,7 @@
     "\n",
     "- Sentences\n",
     "\n",
-    "- Fixed-size chunks (e.g., 512 tokens)\n",
+    "- Fixed-size `Chunks` (e.g., 512 tokens)\n",
     "\n",
     "**4. Embedding Generation:**\n",
     "\n",
