--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -41,6 +41,8 @@
     "\n",
     "In this approach, the retriever fetches relevant documents from an external knowledge base based on the input query. The LLM then uses these documents to generate a more accurate and contextually relevant response.\n",
     "\n",
+    "This approach somehow mitigates the hallucination problem by grounding the LLM's responses in actual data retrieved from the knowledge base.\n",
+    "\n",
     "This works, but **Can't we fine-tune the LLM directly on the external knowledge?**\n",
     "\n",
     "**Answer:** Fine-tuning LLMs on large external knowledge bases can be computationally expensive and time-consuming. RAG allows for dynamic retrieval of information without the need for extensive fine-tuning, making it more efficient and adaptable to changing knowledge.\n",
@@ -87,7 +89,11 @@
     "\n",
     "7. **Output Response:** The generated response is returned to the user.\n",
     "\n",
-    "<hr>\n"
+    "But, this is **Traditional RAG Workflow.**.\n",
+    "\n",
+    "There is **Agentic RAG Workflow** as well, where multiple agents can be used to handle different parts of the retrieval and generation process, allowing for more complex interactions and improved performance.\n",
+    "\n",
+    "<hr>"
    ]
   },
   {
