--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -93,7 +93,9 @@
     "\n",
     "There is **Agentic RAG Workflow** as well, where multiple agents can be used to handle different parts of the retrieval and generation process, allowing for more complex interactions and improved performance.\n",
     "\n",
-    "<hr>"
+    "<hr>\n",
+    "\n",
+    "One of the best example of `RAG` is **Perplexity AI**. It uses RAG to provide accurate and up-to-date answers by retrieving information from a vast knowledge base and generating responses using advanced LLMs.\n"
    ]
   },
   {
