--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -71,6 +71,10 @@
     "\n",
     "- **Generate-then-Retrieve:** The LLM generates an initial response, which is then refined using information from the retrieved documents.\n",
     "\n",
+    "### **3. External Knowledge Base:**\n",
+    "\n",
+    "The external knowledge base is a repository of information from which the retriever fetches relevant documents. This can include databases, document collections, web pages, or any other structured or unstructured data source.\n",
+    "\n",
     "<hr>\n",
     "\n",
     "## **Workflow of RAG:**\n",
