--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -182,6 +182,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ad6b4010",
+   "metadata": {},
+   "source": [
+    "## **RAG Pipeline Architecture**\n",
+    "\n",
+    "To build a production-ready RAG pipeline, there are two main sub pipelines:\n",
+    "\n",
+    "### **Data Ingestion Pipeline**\n",
+    "\n",
+    "The data ingestion pipeline is responsible for collecting and preprocessing data from various sources to populate the external knowledge base. This may involve:\n",
+    "\n",
+    "- Extracting data from structured sources (e.g., databases) and unstructured sources (e.g., documents, web pages).\n",
+    "\n",
+    "- Cleaning and normalizing the data to ensure consistency and quality.\n",
+    "\n",
+    "- Storing the processed data in a format suitable for retrieval (e.g., vector embeddings).\n",
+    "\n",
+    "### **Retrieval Pipeline**\n",
+    "\n",
+    "The retrieval pipeline is responsible for fetching relevant documents from the external knowledge base based on user queries. This may involve:\n",
+    "\n",
+    "- Receiving the user query and generating an embedding for it.\n",
+    "\n",
+    "- Searching the external knowledge base for relevant documents using the query embedding.\n",
+    "\n",
+    "- Ranking the retrieved documents based on their relevance to the query.\n",
+    "\n",
+    "- Returning the top-ranked documents to the language model for response generation.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cc6a85d7",
    "metadata": {},
    "source": [
