--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -191,13 +191,13 @@
     "\n",
     "### **Data Ingestion Pipeline**\n",
     "\n",
-    "The data ingestion pipeline is responsible for collecting and preprocessing data from various sources to populate the external knowledge base. This may involve:\n",
+    "The data ingestion pipeline is responsible for collecting and preprocessing data from various sources to create a knowledge base.\n",
     "\n",
-    "- Extracting data from structured sources (e.g., databases) and unstructured sources (e.g., documents, web pages).\n",
+    "Here, perform:\n",
     "\n",
-    "- Cleaning and normalizing the data to ensure consistency and quality.\n",
+    "**Data Parsing:** Extract text and metadata from various data sources such as documents, web pages, PDFs, etc.\n",
     "\n",
-    "- Storing the processed data in a format suitable for retrieval (e.g., vector embeddings).\n",
+    "**Convert into Document Structure:** For any kind of data be it text, image, audio, video. All of these data have `Metadata`, `Content` and Other attributes. We just can't keep only the content. We need to keep the metadata as well for better retrieval. So, convert all the data into a common document structure that includes content and metadata.\n",
     "\n",
     "### **Retrieval Pipeline**\n",
     "\n",
