--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -20,6 +20,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3efa7557",
+   "metadata": {},
+   "source": [
+    "## **Notes:**\n",
+    "\n",
+    "- Every `LLM` has a knowledge cutoff date. This means that the model does not have information about events or developments that occurred after that date. For example, GPT-3.5 has a knowledge cutoff date of September 2021, which means it does not have information about events or developments that occurred after that date.\n",
+    "\n",
+    "- Every `LLM` or `Embedding Model` has a context window limit. This means that the model can only process a certain amount of text at a time. For example, GPT-3.5 has a context window limit of 4096 tokens, which means it can only process up to 4096 tokens of text at a time.\n",
+    "\n",
+    "Therefore, we've to convert the `Query` or `Prompt` into `Chunks` such that each chunk is within the context window limit of the LLM.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c299367a",
    "metadata": {},
    "source": [
@@ -189,17 +203,23 @@
     "\n",
     "To build a production-ready RAG pipeline, there are two main sub pipelines:\n",
     "\n",
-    "### **Data Ingestion Pipeline**\n",
+    "**Data Ingestion Pipeline**\n",
     "\n",
     "The data ingestion pipeline is responsible for collecting and preprocessing data from various sources to create a knowledge base.\n",
     "\n",
     "Here, perform:\n",
     "\n",
-    "**Data Parsing:** Extract text and metadata from various data sources such as documents, web pages, PDFs, etc.\n",
+    "### **Data Parsing**\n",
+    "\n",
+    "Extract text and metadata from various data sources such as documents, web pages, PDFs, etc.\n",
     "\n",
     "**Convert into Document Structure:** For any kind of data be it text, image, audio, video. All of these data have `Metadata`, `Content` and Other attributes. We just can't keep only the content. We need to keep the metadata as well for better retrieval. So, convert all the data into a common document structure that includes content and metadata.\n",
     "\n",
-    "### **Retrieval Pipeline**\n",
+    "### **Chunking**\n",
+    "\n",
+    "Break down large documents into smaller chunks to ensure that they fit within the context window of the LLM and improve retrieval efficiency.\n",
+    "\n",
+    "**Retrieval Pipeline**\n",
     "\n",
     "The retrieval pipeline is responsible for fetching relevant documents from the external knowledge base based on user queries. This may involve:\n",
     "\n",
