--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -219,6 +219,21 @@
     "\n",
     "Break down large documents into smaller chunks to ensure that they fit within the context window of the LLM and improve retrieval efficiency.\n",
     "\n",
+    "While chunking, there are various strategies like:\n",
+    "\n",
+    "- Overlapping Chunks: Create chunks with overlapping content to preserve context.\n",
+    "\n",
+    "- Fixed-size Chunks: Create chunks of a fixed size (e.g., 512 tokens) for consistency.\n",
+    "\n",
+    "Once the data is parsed and chunked,\n",
+    "\n",
+    "It is fed into the embedding model to generate embeddings for each chunk.\n",
+    "\n",
+    "The generated embeddings are then stored in a vector database to create the knowledge base.\n",
+    "\n",
+    "<hr>\n",
+    "<hr>\n",
+    "\n",
     "**Retrieval Pipeline**\n",
     "\n",
     "The retrieval pipeline is responsible for fetching relevant documents from the external knowledge base based on user queries. This may involve:\n",
