--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -199,11 +199,11 @@
    "id": "ad6b4010",
    "metadata": {},
    "source": [
-    "## **RAG Pipeline Architecture**\n",
+    "**RAG Pipeline Architecture**\n",
     "\n",
     "To build a production-ready RAG pipeline, there are two main sub pipelines:\n",
     "\n",
-    "**Data Ingestion Pipeline**\n",
+    "## **Data Ingestion Pipeline**\n",
     "\n",
     "The data ingestion pipeline is responsible for collecting and preprocessing data from various sources to create a knowledge base.\n",
     "\n",
@@ -214,6 +214,12 @@
     "Extract text and metadata from various data sources such as documents, web pages, PDFs, etc.\n",
     "\n",
     "**Convert into Document Structure:** For any kind of data be it text, image, audio, video. All of these data have `Metadata`, `Content` and Other attributes. We just can't keep only the content. We need to keep the metadata as well for better retrieval. So, convert all the data into a common document structure that includes content and metadata.\n",
+    "\n",
+    "Why do we need `Metadata`?\n",
+    "\n",
+    "- Metadata provides additional context about the content, such as the source, author, date of creation, and other relevant attributes. This information can be crucial for improving the accuracy and relevance of document retrieval during the RAG process.\n",
+    "\n",
+    "- We can use metadata to filter and rank documents during retrieval, ensuring that the most relevant and trustworthy sources are prioritized.\n",
     "\n",
     "### **Chunking**\n",
     "\n",
@@ -234,7 +240,7 @@
     "<hr>\n",
     "<hr>\n",
     "\n",
-    "**Retrieval Pipeline**\n",
+    "## **Retrieval Pipeline**\n",
     "\n",
     "The retrieval pipeline is responsible for fetching relevant documents from the external knowledge base based on user queries. This may involve:\n",
     "\n",
