--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -2,6 +2,47 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "adb77e38",
+   "metadata": {},
+   "source": [
+    "**If Want to Use `Conda Env`**\n",
+    "\n",
+    "**Conda Activate**\n",
+    "\n",
+    "As our conda environment is stored in a external `HDD`, first we need to mount the `HDD` to access the conda environments.\n",
+    "\n",
+    "```bash\n",
+    "# Mount the external HDD\n",
+    "sudo mount -a\n",
+    "```\n",
+    "\n",
+    "This will mount the external `HDD` where the conda environments are stored.\n",
+    "\n",
+    "```bash\n",
+    "# Activate the base conda environment\n",
+    "conda activate base\n",
+    "```\n",
+    "\n",
+    "If not activated, then we need to run:\n",
+    "\n",
+    "```bash\n",
+    "source ./.bashrc\n",
+    "```\n",
+    "\n",
+    "Then we can activate the base conda environment using the above command.\n",
+    "\n",
+    "**NLP Conda Environment Activation**\n",
+    "\n",
+    "```bash\n",
+    "# Run this command to activate the NLP conda environment\n",
+    "conda activate nlp\n",
+    "```\n",
+    "\n",
+    "After activating the base conda environment, you can activate the `nlp` conda environment using the above command. This environment contains all the necessary packages and dependencies for NLP tasks.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "976a8275",
    "metadata": {},
    "source": [
