--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -222,16 +222,70 @@
     "\n",
     "- Multimodal Embeddings (e.g., models that combine text and image embeddings)\n",
     "\n",
-    "**5. Indexing:**\n",
+    "**5. Saving the Embeddings:**\n",
+    "\n",
+    "Once the `embeddings` are generated, it is stored as a row in the below format in the vector database.\n",
+    "\n",
+    "```json\n",
+    "{\n",
+    "  \"id\": \"constitution_2015_art35\",\n",
+    "  \"vector\": [0.0123, -0.8841, ..., 0.0042],\n",
+    "  \"payload\": {\n",
+    "    \"text\": \"Article 35 – Right to Health...\",\n",
+    "    \"article\": \"35\",\n",
+    "    \"source\": \"Constitution of Nepal 2015\",\n",
+    "    \"language\": \"ne\"\n",
+    "  }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "So, \n",
+    "\n",
+    "`vector`: Will be used for similarity search.\n",
+    "\n",
+    "`text`: Once the relevant vectors are retrieved, the corresponding text will be used as `context` for the LLM.\n",
+    "\n",
+    "`payload`: Additional metadata that can be useful for filtering or providing more context.\n",
+    "\n",
+    "So, we only store the `Semantic` meaning of the document in the form of `vector` and `text`. The rest of the information is optional.\n",
+    "\n",
+    "**6. Indexing:**\n",
     "\n",
     "Once the embeddings are generated, they need to be indexed in a vector database for efficient retrieval. Popular vector databases include:\n",
     "\n",
-    "- Milvus\n",
+    "- `Milvus`\n",
     "\n",
-    "- Pinecone\n",
+    "- `Pinecone`\n",
     "\n",
-    "- Weaviate\n",
+    "- `Weaviate`\n",
     "\n",
+    "- `PostgreSQL` with `pgvector` extension\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "## **Knowledge Graphs**\n",
+    "\n",
+    "A knowledge graph is a structured representation of knowledge that captures relationships between entities in a graph format. It consists of nodes (entities) and edges (relationships) that connect these entities.\n",
+    "\n",
+    "Knowledge graphs are used to represent complex relationships and enable reasoning over the data. They can be used in RAG systems to enhance the retrieval process by providing additional context and connections between entities.\n",
+    "\n",
+    "**Example:**\n",
+    "\n",
+    "- Entities: \"Albert Einstein\", \"Theory of Relativity\", \"Physics\"\n",
+    "\n",
+    "- Relationships: \"Albert Einstein\" → \"developed\" → \"Theory of Relativity\"\n",
+    "\n",
+    "Knowledge graphs can be constructed using various techniques, including:\n",
+    "\n",
+    "- Manual curation\n",
+    "\n",
+    "- Automated extraction from text using natural language processing (NLP) techniques\n",
+    "\n",
+    "- Integration of existing structured data sources (e.g., databases, ontologies)\n",
+    "\n",
+    "Knowledge graphs can be stored in graph databases such as `Neo4j`, `Amazon Neptune`, or RDF stores.\n",
+    "\n",
+    "<hr>\n",
     "<hr>\n"
    ]
   },
