--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -220,7 +220,7 @@
     "\n",
     "- Image Embeddings (e.g., CLIP for images)\n",
     "\n",
-    "- Multimodal Embeddings (e.g., models that combine text and image embeddings)\n",
+    "- Multimodal Embeddings (e.g., models that combine text and image embeddings) i.e. `BGE-M3`, `multilingual-e5-large`\n",
     "\n",
     "**5. Saving the Embeddings:**\n",
     "\n",
@@ -286,7 +286,7 @@
     "Knowledge graphs can be stored in graph databases such as `Neo4j`, `Amazon Neptune`, or RDF stores.\n",
     "\n",
     "<hr>\n",
-    "<hr>\n"
+    "<hr>"
    ]
   },
   {
@@ -345,7 +345,11 @@
     "\n",
     "- Ranking the retrieved documents based on their relevance to the query.\n",
     "\n",
-    "- Returning the top-ranked documents to the language model for response generation.\n"
+    "- Returning the top-ranked documents to the language model for response generation.\n",
+    "\n",
+    "- Once we get the documents, we can use them as context to generate the final response using the LLM.\n",
+    "\n",
+    "- LLM takes all the `k` documents as context and generates the final response.\n"
    ]
   },
   {
