--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -349,7 +349,19 @@
     "\n",
     "- Once we get the documents, we can use them as context to generate the final response using the LLM.\n",
     "\n",
-    "- LLM takes all the `k` documents as context and generates the final response.\n"
+    "- LLM takes all the `k` documents as context and generates the final response.\n",
+    "\n",
+    "In real world applications, we need to use `Hybrid Search` i.e. **Vector Search + Keyword Search** to get the best results.\n",
+    "\n",
+    "**Keyword Search**\n",
+    "\n",
+    "- Involves searching for documents that contain specific keywords or phrases from the user query. It uses techniques like `BM25` or `TF-IDF` to rank documents based on keyword relevance.\n",
+    "\n",
+    "**Vector Search**\n",
+    "\n",
+    "- Involves searching for documents based on their semantic similarity to the user query. It uses vector embeddings to represent both the query and documents, allowing for more nuanced matching beyond exact keyword matches.\n",
+    "\n",
+    "Finally, we can combine the results from both searches as `Final Score: α * Vector_Score + β * Keyword_Score`, where `α` and `β` are weights that determine the importance of each search method."
    ]
   },
   {
