--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -361,7 +361,17 @@
     "\n",
     "- Involves searching for documents based on their semantic similarity to the user query. It uses vector embeddings to represent both the query and documents, allowing for more nuanced matching beyond exact keyword matches.\n",
     "\n",
-    "Finally, we can combine the results from both searches as `Final Score: α * Vector_Score + β * Keyword_Score`, where `α` and `β` are weights that determine the importance of each search method."
+    "Finally, we can combine the results from both searches as `Final Score: α * Vector_Score + β * Keyword_Score`, where `α` and `β` are weights that determine the importance of each search method.\n",
+    "\n",
+    "### **Cross Encoder Re-Ranking**\n",
+    "\n",
+    "After retrieving documents using hybrid search, we will have top `k` documents, we can further improve the relevance of the results by applying a `cross-encoder` model for re-ranking.\n",
+    "\n",
+    "**Cross Encoder:**\n",
+    "\n",
+    "- A cross-encoder is a type of neural network model that takes both the query and document as input and produces a relevance score. It considers the interaction between the query and document, allowing for more accurate relevance estimation.\n",
+    "\n",
+    "Based on the `Relevance Scores` from the cross-encoder, we can re-rank the top `k` documents to ensure that the most relevant ones are prioritized for the LLM to generate the final response."
    ]
   },
   {
