--- a/Weaviate/Weaviate.ipynb
+++ b/Weaviate/Weaviate.ipynb
@@ -9,6 +9,212 @@
    "source": [
     "!pip install weaviate-client pandas requests tqdm"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81531d3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import weaviate\n",
+    "\n",
+    "print(f\"Your Weaviate client library version is: {weaviate.__version__}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4632ec76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import weaviate\n",
+    "import os\n",
+    "\n",
+    "headers = {\n",
+    "    \"X-Cohere-Api-Key\": \"sXzSSVZ4S5Y9L2ykxlLcsKlfd9i0eNS7hnU9JAeG\"\n",
+    "}  # Replace with your Cohere API key\n",
+    "\n",
+    "client = weaviate.connect_to_local(headers=headers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16e5686e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate your client (not shown). e.g.:\n",
+    "# client = weaviate.connect_to_weaviate_cloud(...) or\n",
+    "# client = weaviate.connect_to_local(...)\n",
+    "\n",
+    "assert client.is_ready()  # This will raise an exception if the client is not ready"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c56e59e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "# Instantiate your client (not shown). e.g.:\n",
+    "# client = weaviate.connect_to_weaviate_cloud(...) or\n",
+    "# client = weaviate.connect_to_local(...)\n",
+    "\n",
+    "metainfo = client.get_meta()\n",
+    "print(json.dumps(metainfo, indent=2))  # Print the meta information in a readable format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ee54af5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import weaviate\n",
+    "from weaviate.classes.config import Configure, Property, DataType\n",
+    "import os\n",
+    "\n",
+    "\n",
+    "# Instantiate your client (not shown). e.g.:\n",
+    "# client = weaviate.connect_to_weaviate_cloud(...) or\n",
+    "# client = weaviate.connect_to_local(...)\n",
+    "\n",
+    "client.collections.create(\n",
+    "    name=\"Movies\",\n",
+    "    properties=[\n",
+    "        Property(name=\"title\", data_type=DataType.TEXT),\n",
+    "        Property(name=\"overview\", data_type=DataType.TEXT),\n",
+    "        Property(name=\"vote_average\", data_type=DataType.NUMBER),\n",
+    "        Property(name=\"genre_ids\", data_type=DataType.INT_ARRAY),\n",
+    "        Property(name=\"release_date\", data_type=DataType.DATE),\n",
+    "        Property(name=\"tmdb_id\", data_type=DataType.INT),\n",
+    "    ],\n",
+    "    # Define the vectorizer module\n",
+    "    vector_config=Configure.Vectors.text2vec_cohere(model=\"embed-v4.0\"),\n",
+    "    # Define the generative module\n",
+    "    generative_config=Configure.Generative.cohere(model=\"command-a-03-2025\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "549ad6bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = weaviate.connect_to_local(headers=headers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "824f3553",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import weaviate\n",
+    "import pandas as pd\n",
+    "import requests\n",
+    "from datetime import datetime, timezone\n",
+    "import json\n",
+    "from weaviate.util import generate_uuid5\n",
+    "from tqdm import tqdm\n",
+    "import os\n",
+    "\n",
+    "# Instantiate your client (not shown). e.g.:\n",
+    "# client = weaviate.connect_to_weaviate_cloud(...) or\n",
+    "# client = weaviate.connect_to_local(...)\n",
+    "\n",
+    "data_url = \"https://raw.githubusercontent.com/weaviate-tutorials/edu-datasets/main/movies_data_1990_2024.json\"\n",
+    "resp = requests.get(data_url)\n",
+    "df = pd.DataFrame(resp.json())\n",
+    "\n",
+    "# Configure collection object\n",
+    "movies = client.collections.use(\"Movies\")\n",
+    "\n",
+    "# Enter context manager\n",
+    "with movies.batch.fixed_size(batch_size=200) as batch:\n",
+    "    # Loop through the data\n",
+    "    for i, movie in tqdm(df.iterrows()):\n",
+    "        # Convert data types\n",
+    "        # Convert a JSON date to `datetime` and add time zone information\n",
+    "        release_date = datetime.fromisoformat(movie[\"release_date\"]).replace(tzinfo=timezone.utc)\n",
+    "        # Convert a JSON array to a list of integers\n",
+    "        genre_ids = json.loads(movie[\"genre_ids\"])\n",
+    "\n",
+    "        # Build the object payload\n",
+    "        movie_obj = {\n",
+    "            \"title\": movie[\"title\"],\n",
+    "            \"overview\": movie[\"overview\"],\n",
+    "            \"vote_average\": movie[\"vote_average\"],\n",
+    "            \"genre_ids\": genre_ids,\n",
+    "            \"release_date\": release_date,\n",
+    "            \"tmdb_id\": movie[\"id\"],\n",
+    "        }\n",
+    "\n",
+    "        # Add object to batch queue\n",
+    "        batch.add_object(\n",
+    "            properties=movie_obj,\n",
+    "            uuid=generate_uuid5(movie[\"id\"])\n",
+    "        )\n",
+    "        # Batcher automatically sends batches\n",
+    "\n",
+    "# Check for failed objects\n",
+    "if len(movies.batch.failed_objects) > 0:\n",
+    "    print(f\"Failed to import {len(movies.batch.failed_objects)} objects\")\n",
+    "\n",
+    "client.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f1cbbdb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = weaviate.connect_to_local(headers=headers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79d0f4d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import weaviate\n",
+    "from weaviate.classes.query import Filter, MetadataQuery\n",
+    "import os\n",
+    "\n",
+    "\n",
+    "# Instantiate your client (not shown). e.g.:\n",
+    "# client = weaviate.connect_to_weaviate_cloud(...) or\n",
+    "# client = weaviate.connect_to_local(...)\n",
+    "\n",
+    "# Configure collection object\n",
+    "movies = client.collections.use(\"Movies\")\n",
+    "\n",
+    "# Perform query\n",
+    "response = movies.query.bm25(\n",
+    "    query=\"history\", limit=5, return_metadata=MetadataQuery(score=True)\n",
+    ")\n",
+    "\n",
+    "# Inspect the response\n",
+    "for o in response.objects:\n",
+    "    print(o.properties[\"title\"], o.properties[\"release_date\"].year)  # Print the title and release year (note the release date is a datetime object)\n",
+    "    print(f\"BM25 score: {o.metadata.score:.3f}\\n\")  # Print the BM25 score of the object from the query\n",
+    "\n",
+    "client.close()"
+   ]
   }
  ],
  "metadata": {
