--- a/Weaviate/Notes.ipynb
+++ b/Weaviate/Notes.ipynb
@@ -364,6 +364,134 @@
     "    print(f\"Hybrid score: {o.metadata.score:.3f}\\n\")  # Print the hybrid search score of the object from the query\n",
     "\n",
     "client.close()\n",
+    "```\n",
+    "\n",
+    "<hr>\n",
+    "<hr>\n",
+    "<hr>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e06da54",
+   "metadata": {},
+   "source": [
+    "## **Filtering While Searching**\n",
+    "\n",
+    "We can apply filters to our searches in Weaviate to narrow down the results based on specific criteria.\n",
+    "\n",
+    "```python\n",
+    "import weaviate\n",
+    "from weaviate.classes.query import Filter, MetadataQuery\n",
+    "import os\n",
+    "\n",
+    "from datetime import datetime\n",
+    "\n",
+    "\n",
+    "# Instantiate your client (not shown). e.g.:\n",
+    "# client = weaviate.connect_to_weaviate_cloud(...) or\n",
+    "# client = weaviate.connect_to_local(...)\n",
+    "\n",
+    "# Configure collection object\n",
+    "movies = client.collections.use(\"Movies\")\n",
+    "\n",
+    "# Perform query\n",
+    "response = movies.query.near_text(\n",
+    "    query=\"dystopian future\",\n",
+    "    limit=5,\n",
+    "    return_metadata=MetadataQuery(distance=True),\n",
+    "    filters=Filter.by_property(\"release_date\").greater_than(datetime(2020, 1, 1))\n",
+    ")\n",
+    "\n",
+    "# Inspect the response\n",
+    "for o in response.objects:\n",
+    "    print(o.properties[\"title\"], o.properties[\"release_date\"].year)  # Print the title and release year (note the release date is a datetime object)\n",
+    "    print(f\"Distance to query: {o.metadata.distance:.3f}\\n\")  # Print the distance of the object from the query\n",
+    "\n",
+    "client.close()\n",
+    "```\n",
+    "\n",
+    "<hr>\n",
+    "<hr>\n",
+    "<hr>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a48de87a",
+   "metadata": {},
+   "source": [
+    "## **Single Prompt Generations**\n",
+    "\n",
+    "Until npw, we've focused on searching and retrieving data from Weaviate. However, Weaviate also supports generative capabilities, allowing us to generate text based on prompts using integrated language models.\n",
+    "\n",
+    "```python\n",
+    "import os\n",
+    "import weaviate\n",
+    "\n",
+    "# Instantiate your client (not shown). e.g.:\n",
+    "# client = weaviate.connect_to_weaviate_cloud(...) or\n",
+    "# client = weaviate.connect_to_local(...)\n",
+    "\n",
+    "# Configure collection object\n",
+    "movies = client.collections.use(\"Movies\")\n",
+    "\n",
+    "# Perform query\n",
+    "response = movies.generate.near_text(\n",
+    "    query=\"dystopian future\",\n",
+    "    limit=5,\n",
+    "    single_prompt=\"Translate this into French: {title}\"\n",
+    ")\n",
+    "\n",
+    "# Inspect the response\n",
+    "for o in response.objects:\n",
+    "    print(o.properties[\"title\"])  # Print the title\n",
+    "    print(o.generated)  # Print the generated text (the title, in French)\n",
+    "\n",
+    "client.close()\n",
+    "```\n",
+    "\n",
+    "<hr>\n",
+    "<hr>\n",
+    "<hr>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a47282ff",
+   "metadata": {},
+   "source": [
+    "## **Group Task Generations**\n",
+    "\n",
+    "We can also perform group task generations in Weaviate, where we generate text based on multiple prompts for each retrieved object.\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "import os\n",
+    "import weaviate\n",
+    "\n",
+    "# Instantiate your client (not shown). e.g.:\n",
+    "# client = weaviate.connect_to_weaviate_cloud(...) or\n",
+    "# client = weaviate.connect_to_local(...)\n",
+    "\n",
+    "# Configure collection object\n",
+    "movies = client.collections.use(\"Movies\")\n",
+    "\n",
+    "# Perform query\n",
+    "response = movies.generate.near_text(\n",
+    "    query=\"dystopian future\",\n",
+    "    limit=5,\n",
+    "    grouped_task=\"What do these movies have in common?\",\n",
+    "    # grouped_properties=[\"title\", \"overview\"]  # Optional parameter; for reducing prompt length\n",
+    ")\n",
+    "\n",
+    "# Inspect the response\n",
+    "for o in response.objects:\n",
+    "    print(o.properties[\"title\"])  # Print the title\n",
+    "print(response.generated)  # Print the generated text (the commonalities between them)\n",
+    "\n",
+    "client.close()\n",
+    "\n",
     "```"
    ]
   }
