--- a/Weaviate/Weaviate.ipynb
+++ b/Weaviate/Weaviate.ipynb
@@ -215,6 +215,180 @@
     "\n",
     "client.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3820e802",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = weaviate.connect_to_local(headers=headers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ad6699f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import weaviate\n",
+    "from weaviate.classes.query import Filter, MetadataQuery\n",
+    "import os\n",
+    "\n",
+    "\n",
+    "# Instantiate your client (not shown). e.g.:\n",
+    "# client = weaviate.connect_to_weaviate_cloud(...) or\n",
+    "# client = weaviate.connect_to_local(...)\n",
+    "\n",
+    "# Configure collection object\n",
+    "movies = client.collections.use(\"Movies\")\n",
+    "\n",
+    "# Perform query\n",
+    "response = movies.query.hybrid(\n",
+    "    query=\"history\", limit=5, return_metadata=MetadataQuery(score=True)\n",
+    ")\n",
+    "\n",
+    "# Inspect the response\n",
+    "for o in response.objects:\n",
+    "    print(o.properties[\"title\"], o.properties[\"release_date\"].year)  # Print the title and release year (note the release date is a datetime object)\n",
+    "    print(f\"Hybrid score: {o.metadata.score:.3f}\\n\")  # Print the hybrid search score of the object from the query\n",
+    "\n",
+    "client.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aae7819d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = weaviate.connect_to_local(headers=headers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d444c42a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import weaviate\n",
+    "from weaviate.classes.query import Filter, MetadataQuery\n",
+    "import os\n",
+    "\n",
+    "from datetime import datetime\n",
+    "\n",
+    "\n",
+    "# Instantiate your client (not shown). e.g.:\n",
+    "# client = weaviate.connect_to_weaviate_cloud(...) or\n",
+    "# client = weaviate.connect_to_local(...)\n",
+    "\n",
+    "# Configure collection object\n",
+    "movies = client.collections.use(\"Movies\")\n",
+    "\n",
+    "# Perform query\n",
+    "response = movies.query.near_text(\n",
+    "    query=\"dystopian future\",\n",
+    "    limit=5,\n",
+    "    return_metadata=MetadataQuery(distance=True),\n",
+    "    filters=Filter.by_property(\"release_date\").greater_than(datetime(2020, 1, 1))\n",
+    ")\n",
+    "\n",
+    "# Inspect the response\n",
+    "for o in response.objects:\n",
+    "    print(o.properties[\"title\"], o.properties[\"release_date\"].year)  # Print the title and release year (note the release date is a datetime object)\n",
+    "    print(f\"Distance to query: {o.metadata.distance:.3f}\\n\")  # Print the distance of the object from the query\n",
+    "\n",
+    "client.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2b52334",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = weaviate.connect_to_local(headers=headers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe3b8a22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import weaviate\n",
+    "\n",
+    "# Instantiate your client (not shown). e.g.:\n",
+    "# client = weaviate.connect_to_weaviate_cloud(...) or\n",
+    "# client = weaviate.connect_to_local(...)\n",
+    "\n",
+    "# Configure collection object\n",
+    "movies = client.collections.use(\"Movies\")\n",
+    "\n",
+    "# Perform query\n",
+    "response = movies.generate.near_text(\n",
+    "    query=\"dystopian future\",\n",
+    "    limit=5,\n",
+    "    single_prompt=\"Translate this into French: {title}\"\n",
+    ")\n",
+    "\n",
+    "# Inspect the response\n",
+    "for o in response.objects:\n",
+    "    print(o.properties[\"title\"])  # Print the title\n",
+    "    print(o.generated)  # Print the generated text (the title, in French)\n",
+    "\n",
+    "client.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47d6257c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = weaviate.connect_to_local(headers=headers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7038db32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import weaviate\n",
+    "\n",
+    "# Instantiate your client (not shown). e.g.:\n",
+    "# client = weaviate.connect_to_weaviate_cloud(...) or\n",
+    "# client = weaviate.connect_to_local(...)\n",
+    "\n",
+    "# Configure collection object\n",
+    "movies = client.collections.use(\"Movies\")\n",
+    "\n",
+    "# Perform query\n",
+    "response = movies.generate.near_text(\n",
+    "    query=\"dystopian future\",\n",
+    "    limit=5,\n",
+    "    grouped_task=\"What do these movies have in common?\",\n",
+    "    # grouped_properties=[\"title\", \"overview\"]  # Optional parameter; for reducing prompt length\n",
+    ")\n",
+    "\n",
+    "# Inspect the response\n",
+    "for o in response.objects:\n",
+    "    print(o.properties[\"title\"])  # Print the title\n",
+    "print(response.generated)  # Print the generated text (the commonalities between them)\n",
+    "\n",
+    "client.close()"
+   ]
   }
  ],
  "metadata": {
